--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Sushi Wadasi</title>
+    <style>
+      #scrollbar::-webkit-scrollbar {
+        width: 10px;
+        height: 3px;
+      }
+
+      #scrollbar::-webkit-scrollbar-track {
+        border-radius: 100vh;
+        background: #f7f4ed;
+      }
+
+      #scrollbar::-webkit-scrollbar-thumb {
+        background: #e0cbcb;
+        border-radius: 100vh;
+        border: 3px solid #f6f7ed;
+      }
+
+      #scrollbar::-webkit-scrollbar-thumb:hover {
+        background: #c0a0b9;
+      }
+    </style>
   </head>
-  <body>
+  <body
+    class="bg-fixed bg-cover"
+    id="scrollbar"
+    style="background-image: url(./assests/bg.jpg)"
+  >
     <div>
       <header
         class="flex flex-row justify-center items-center top-0 left-0 sticky w-screen h-20 bg-gray-600/60 shadow-inner shadow-sm"
@@ -17,7 +42,9 @@
             class="rounded-md cursor-pointer flex items-center justify-center h-10 w-20 text-slate-700 font-medium hover:bg-slate-500 hover:text-slate-200 duration-200"
             >Home</a
           >
-          <a class="rounded-md flex cursor-pointer items-center justify-center h-auto w-20 text-slate-200 font-bold" >
+          <a
+            class="rounded-md flex cursor-pointer items-center justify-center h-auto w-20 text-slate-200 font-bold"
+          >
             LOGO
           </a>
           <a
@@ -26,6 +53,18 @@
           >
         </nav>
       </header>
+      <main class="h-screen w-screen">
+        <section class="h-screen w-screen flex flex-col justify-center items-center " >
+          <div class="flex flex-col justify-center text-white items-center text-bold font-serif text-6xl h-1/3 " >
+            <h1>Sushi Wadasi</h1>
+            <p class="text-base" >This is restaurant</p>
+          </div>
+          <div class="flex justify-center items-start text-bold font-serif  h-1/3" >
+            <p>This is restaurant</p>
+          </div>
+          <div class="h-1/3" ></div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
