--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       >
         <nav class="flex flex-row space-x-10 text-white">
           <a
-            class="rounded-md cursor-pointer flex items-center justify-center h-10 w-20 text-slate-700 font-medium hover:bg-slate-500 hover:text-slate-200 duration-200"
+            class="rounded-md cursor-pointer flex items-center justify-center h-10 w-20 text-slate-300 font-medium hover:bg-slate-500 hover:text-slate-100 duration-200"
             >Home</a
           >
           <a
@@ -48,21 +48,43 @@
             LOGO
           </a>
           <a
-            class="rounded-md flex cursor-pointer items-center justify-center h-10 w-20 text-slate-700 font-medium hover:bg-slate-500 hover:text-slate-200 duration-200"
+            class="rounded-md flex cursor-pointer items-center justify-center h-10 w-20 text-slate-300 font-medium hover:bg-slate-500 hover:text-slate-100 duration-200"
             >About</a
           >
         </nav>
       </header>
       <main class="h-screen w-screen">
-        <section class="h-screen w-screen flex flex-col justify-center items-center " >
-          <div class="flex flex-col justify-center text-white items-center text-bold font-serif text-6xl h-1/3 " >
+        <section
+          class="h-screen w-screen flex flex-col justify-center items-center"
+        >
+          <div
+            class="flex flex-col justify-center text-white items-center text-bold font-serif text-6xl h-1/3 space-y-10"
+          >
             <h1>Sushi Wadasi</h1>
-            <p class="text-base" >This is restaurant</p>
           </div>
-          <div class="flex justify-center items-start text-bold font-serif  h-1/3" >
-            <p>This is restaurant</p>
+          <div
+            class="flex justify-center items-center pb-10 text-bold font-serif h-1/3"
+          >
+            <button
+              type="button"
+              class="text-white border-2 h-16 w-32 duration-200 hover:bg-slate-900 rounded-lg hover:rounded-md hover:border-slate-900 uppercase font-mono"
+            >
+              Order Now
+            </button>
           </div>
-          <div class="h-1/3" ></div>
+          <div class="flex flex-row h-1/3 w-screen divide-x-2 divide-white">
+            <div class="flex flex-col justify-start space-y-9 items-center pt-5 w-full">
+              <h1 class="text-white text-bold font-serif text-2xl font-mono">
+                Contact Us
+              </h1>
+              <p class="text-white font-bold font-serif text-lg" >+1 000 00000</p>
+            </div>
+
+            <div class="flex flex-col justify-start space-y-9 items-center pt-5 w-full font-mono">
+              <h1 class="text-white text-bold font-serif text-2xl">Address</h1>
+              <address class="text-white font-bold font-mono text-lg" >150/6 Street, NY</address>
+            </div>
+          </div>
         </section>
       </main>
     </div>
