--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             >Home</a
           >
           <a
-            class="rounded-md flex cursor-pointer items-center justify-center h-auto w-20 text-slate-200 font-bold"
+            class="rounded-md flex cursor-pointer items-center justify-center h-auto w-60 text-4xl text-[#ed1b43] font-bold"
           >
-            LOGO
+            Sushi Wadasi
           </a>
           <a
             class="rounded-md flex cursor-pointer items-center justify-center h-10 w-20 text-slate-300 font-medium hover:bg-slate-500 hover:text-slate-100 duration-200"
@@ -58,31 +58,110 @@
           class="h-screen w-screen flex flex-col justify-center items-center"
         >
           <div
-            class="flex flex-col justify-center text-white items-center text-bold font-serif text-6xl h-1/3 space-y-10"
+            class="flex flex-col justify-center text-white items-center text-bold font-serif text-6xl h-1/3 pt-5"
           >
-            <h1>Sushi Wadasi</h1>
+            <div class="flex w-screen justify-center items-center">
+              <div class="w-52 h-1 bg-[#ed1b43]"></div>
+            </div>
+            <h1 class="underline decoration-4 decoration-[#ed1b43]">
+              Sushi Wadasi
+            </h1>
           </div>
           <div
             class="flex justify-center items-center pb-10 text-bold font-serif h-1/3"
           >
             <button
               type="button"
-              class="text-white border-2 h-16 w-32 duration-200 hover:bg-slate-900 rounded-lg hover:rounded-md hover:border-slate-900 uppercase font-mono"
+              class="text-white border-2 h-16 w-32 duration-200 hover:bg-slate-900 rounded-lg hover:rounded-md hover:border-[#ed1b43] uppercase font-mono"
             >
               Order Now
             </button>
           </div>
-          <div class="flex flex-row h-1/3 w-screen divide-x-2 divide-white">
-            <div class="flex flex-col justify-start space-y-9 items-center pt-5 w-full">
+          <div
+            class="flex flex-row h-1/3 w-screen divide-x-2 divide-gray-300/70"
+          >
+            <div
+              class="flex flex-col justify-start space-y-9 items-center pt-8 w-full"
+            >
               <h1 class="text-white text-bold font-serif text-2xl font-mono">
                 Contact Us
               </h1>
-              <p class="text-white font-bold font-serif text-lg" >+1 000 00000</p>
+              <p class="text-white font-bold font-serif text-lg">
+                +1 000 00000
+              </p>
             </div>
 
-            <div class="flex flex-col justify-start space-y-9 items-center pt-5 w-full font-mono">
+            <div
+              class="flex flex-col justify-start space-y-9 items-center pt-8 w-full font-mono"
+            >
               <h1 class="text-white text-bold font-serif text-2xl">Address</h1>
-              <address class="text-white font-bold font-mono text-lg" >150/6 Street, NY</address>
+              <address class="text-white font-bold font-mono text-lg">
+                150/6 Street, NY
+              </address>
+            </div>
+          </div>
+        </section>
+        <div class="flex pt-3 w-screen justify-center items-center"></div>
+        <section
+          class="h-screen w-screen flex flex-col mt-10 justify-start items-center"
+        >
+          <h1
+            class="text-bold text-white text-4xl font-mono underline uppercase decoration-4 decoration-[#ed1b43]"
+          >
+            Our Menu
+          </h1>
+          <br />
+          <div class="w-screen h-full flex flex-row">
+            <div class="w-full flex flex-col justify-center items-center">
+              <div class="flex justify-center items-center h-full">
+                <div
+                  class="flex justify-center items-center w-60 h-60 bg-[#ed1b43] rounded-full"
+                >
+                  <img src="./assests/pizza.png" class="w-52 h-52" />
+                </div>
+              </div>
+              <div class="flex h-full">
+                <h1
+                  class="text-white decoration-4 underline decoration-[#ed1b43] text-bold font-serif text-4xl font-mono"
+                >
+                  Pizza
+                </h1>
+              </div>
+            </div>
+            <div class="w-full flex flex-col justify-center items-center">
+              <div class="flex justify-center items-center h-full">
+                <div
+                  class="flex justify-center items-center w-60 h-60 bg-[#ed1b43] rounded-full"
+                >
+                  <img src="./assests/salad.png" class="w-[180px] h-[180px]" />
+                </div>
+              </div>
+              <div class="flex h-full">
+                <h1
+                  class="text-white decoration-4 text-bold font-serif text-4xl font-mono underline decoration-[#ed1b43]"
+                >
+                  Salad
+                </h1>
+              </div>
+            </div>
+            <div class="w-full flex flex-col justify-center items-center">
+              <div class="flex justify-center items-center h-full">
+                <div
+                  class="flex justify-center items-center w-60 h-60 bg-[#ed1b43] rounded-full"
+                >
+                  <img
+                    src="./assests/sandwich.png"
+                    class="w-[180px] h-[180px]"
+                  />
+                </div>
+              </div>
+              <div class="flex h-full">
+                <h1
+                  class="text-white underline decoration-[#ed1b43] decoration-4 text-bold font-serif text-4xl font-mono"
+                >
+                  Sandwich
+                </h1>
+              </div>
             </div>
           </div>
         </section>
